--- a/themes/kuiros/layouts/index.html
+++ b/themes/kuiros/layouts/index.html
@@ -37,7 +37,7 @@
         >
           Wedding
         </a>
-        : Info for the big day
+        : Dinner, drinks, dancing
       </div>
       <div>
         <a
@@ -47,7 +47,7 @@
         >
           Home
         </a>
-        : Code for this website
+        : My internet oasis
       </div>
       <div>
         <a
