--- a/themes/kuiros/layouts/index.html
+++ b/themes/kuiros/layouts/index.html
@@ -4,7 +4,7 @@
     <img class="bio__profile-image" src="/images/me.png" />
     <div class="bio__message">
       <p>I'm a programmer and founder based in San Francisco.</p>
-      <p>Currently, I'm spending my days as CTO of <a href="https://heyoutline.com" target="_blank" rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href="/about">About</a> • <a href="/now">Now</a></p>
+      <p>Currently, I'm spending my days as CTO of <a href="https://heyoutline.com" target="_blank" rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href="/about">About</a> • <a href="/now">Now</a> • <a href="/contact">Contact</a></p>
     </div>
   </div>
     <div class="home-section">
@@ -47,7 +47,7 @@
         >
           Home
         </a>
-        : My internet oasis
+        : You are here
       </div>
       <div>
         <a
@@ -55,7 +55,7 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          ToutApp
+          Toutapp
         </a>
         : Workflow tool for sales teams
       </div>
@@ -77,7 +77,7 @@
         >
           EEBHub
         </a>
-        : Open source tool to simulate building energy
+        : Building energy consumption simulation
       </div>
     </div>
     <div class="home-section">
@@ -87,6 +87,9 @@
       </div>
       <div>
         <a href="/places/new-york">New York</a>
+      </div>
+      <div>
+        <a href="/places/pittsburgh">Pittsburgh</a>
       </div>
     </div>
     <div class="home-section">
