--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ html, body {
     font-size: 16px;
     font-family: var(--font-family), "serif";
     color: var(--black);
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 h1, h2, h3, h4, h5 {
@@ -45,6 +49,10 @@ strong {
   font-weight: bold;
 }
 
+em {
+  font-style: italic;
+}
+
 .nav__link {
   margin-bottom: 1.5em;
 }
@@ -52,12 +60,11 @@ strong {
 .main {
   display: flex;
   justify-content: center;
+  flex: 1;
 }
 
 .main__content {
   padding: 2em 1em;
-  width: 100%;
-  min-height: 100vh;
   max-width: var(--site-max-width);
 
   display: flex;
@@ -93,7 +100,7 @@ strong {
   font-size: .80em;
   display: flex;
   justify-content: center;
-  flex: 1;
+  width: 100%;
 }
 
 .footer__content {
