--- a/themes/kuiros/layouts/index.html
+++ b/themes/kuiros/layouts/index.html
@@ -51,6 +51,16 @@
       </div>
       <div>
         <a
+          href="https://www.marketo.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+        Marketo
+        </a>
+        : Marketing automation platform
+      </div>
+      <div>
+        <a
           href="https://www.marketo.com/software/marketo-sales-connect"
           target="_blank"
           rel="noopener noreferrer"
