--- a/themes/kuiros/layouts/_default/single.html
+++ b/themes/kuiros/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <a class="nav__link" href="/">← Home</a>
-<h1>{{ .Title }}</h1>
+<h1 class="page-title">{{ .Title }}</h1>
 <div>
 {{ .Content }}
 </div>
