--- a/themes/kuiros/layouts/index.html
+++ b/themes/kuiros/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <h1>Hi, I'm Josh.</h1>
+  <h1 class="page-title">Hi, I'm Josh.</h1>
   <div class="bio">
     <img class="bio__profile-image" src="/images/me.png" />
     <div class="bio__message">
@@ -7,114 +7,108 @@
       <p>Currently, I'm spending my days as CTO of <a href="https://heyoutline.com" target="_blank" rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href="/about">About</a> • <a href="/now">Now</a> • <a href="/contact">Contact</a></p>
     </div>
   </div>
-    <div class="home-section">
-      <h1>Code</h1>
-      <div>
-        <a
-          href="https://www.heyoutline.com"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Outline
-        </a>
-        : Community operating system
-      </div>
-      <div>
-        <a
-          href="https://www.datagrail.io"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          DataGrail
-        </a>
-        : Data compliance as a service
-      </div>
-      <div>
-        <a
-          href="https://joshplusrach.netlify.com"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Wedding
-        </a>
-        : Dinner, drinks, dancing
-      </div>
-      <div>
-        <a
-          href="https://github.com/kuiro5/home"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Home
-        </a>
-        : You are here
-      </div>
-      <div>
-        <a
-          href="https://www.marketo.com"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-        Marketo
-        </a>
-        : Marketing automation platform
-      </div>
-      <div>
-        <a
-          href="https://www.marketo.com/software/marketo-sales-connect"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Toutapp
-        </a>
-        : Workflow tool for sales teams
-      </div>
-      <div>
-        <a
-          href="https://www.ciscospark.com"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Cisco Spark
-        </a>
-        : Enterprise messaging platform
-      </div>
-      <div>
-        <a
-          href="https://www.energy.gov/articles/energy-efficient-buildings-hub"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          EEBHub
-        </a>
-        : Building energy consumption simulation
-      </div>
-    </div>
-    <div class="home-section">
-      <h1>Places</h1>
-      <div>
-        <a href="/places/san-francisco">San Francisco</a>
-      </div>
-      <div>
-        <a href="/places/new-york">New York</a>
-      </div>
-      <div>
-        <a href="/places/pittsburgh">Pittsburgh</a>
-      </div>
-    </div>
-    <div class="home-section">
-      <h1>Photos</h1>
-      <div>
-        <a href="/photos/bali">Bali</a>
-      </div>
-      <div>
-        <a href="/photos/joshua_tree">Joshua Tree</a>
-      </div>
-      <div>
-        <a href="/photos/mendocino">Mendocino</a>
-      </div>
-      <div>
-        <a href="/photos/sea_ranch">Sea Ranch</a>
-      </div>
-    </div>
+  <h1>Code</h1>
+  <div>
+    <a
+      href="https://www.heyoutline.com"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Outline
+    </a>
+    : Community operating system
+  </div>
+  <div>
+    <a
+      href="https://www.datagrail.io"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      DataGrail
+    </a>
+    : Data compliance as a service
+  </div>
+  <div>
+    <a
+      href="https://joshplusrach.netlify.com"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Wedding
+    </a>
+    : Dinner, drinks, dancing
+  </div>
+  <div>
+    <a
+      href="https://github.com/kuiro5/home"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Home
+    </a>
+    : You are here
+  </div>
+  <div>
+    <a
+      href="https://www.marketo.com"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+    Marketo
+    </a>
+    : Marketing automation platform
+  </div>
+  <div>
+    <a
+      href="https://www.marketo.com/software/marketo-sales-connect"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Toutapp
+    </a>
+    : Workflow tool for sales teams
+  </div>
+  <div>
+    <a
+      href="https://www.ciscospark.com"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Cisco Spark
+    </a>
+    : Enterprise messaging platform
+  </div>
+  <div>
+    <a
+      href="https://www.energy.gov/articles/energy-efficient-buildings-hub"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      EEBHub
+    </a>
+    : Building energy consumption simulation
+  </div>
+  <h1>Places</h1>
+  <div>
+    <a href="/places/san-francisco">San Francisco</a>
+  </div>
+  <div>
+    <a href="/places/new-york">New York</a>
+  </div>
+  <div>
+    <a href="/places/pittsburgh">Pittsburgh</a>
+  </div>
+  <h1>Photos</h1>
+  <div>
+    <a href="/photos/bali">Bali</a>
+  </div>
+  <div>
+    <a href="/photos/joshua_tree">Joshua Tree</a>
+  </div>
+  <div>
+    <a href="/photos/mendocino">Mendocino</a>
+  </div>
+  <div>
+    <a href="/photos/sea_ranch">Sea Ranch</a>
+  </div>
 {{ end }}
