--- a/themes/kuiros/layouts/index.html
+++ b/themes/kuiros/layouts/index.html
@@ -100,6 +100,9 @@
   </div>
   <h1>Photos</h1>
   <div>
+    <a href="/photos/bode">Bode</a>
+  </div>
+  <div>
     <a href="/photos/bali">Bali</a>
   </div>
   <div>
