--- a/themes/kuiros/static/css/style.css
+++ b/themes/kuiros/static/css/style.css
@@ -55,6 +55,7 @@ html, body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5 {
