--- a/themes/kuiros/layouts/_default/_markup/render-link.html
+++ b/themes/kuiros/layouts/_default/_markup/render-link.html
@@ -1,3 +1,3 @@
-<a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if strings.HasPrefix .Destination "http" }} target="_blank"{{ end }}>{{.Text | markdownify}}</a>
+<a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if strings.HasPrefix .Destination "http" }} target="_blank"{{ end }}>{{.Text}}</a>
 {{- /* This comment removes trailing newlines. */ -}}
 
