--- a/themes/kuiros/layouts/_default/baseof.html
+++ b/themes/kuiros/layouts/_default/baseof.html
@@ -11,5 +11,6 @@
         <div class="footer">
             {{- partial "footer.html" . -}}
         </div>
+        {{- partial "analytics.html" . -}}
     </body>
 </html>
