--- a/themes/kuiros/layouts/index.html
+++ b/themes/kuiros/layouts/index.html
@@ -3,7 +3,7 @@
   <div class="bio">
     <img class="bio__profile-image" src="/images/me.png" />
     <div class="bio__message">
-      <p>I'm a programmer, and founder based in San Francisco.</p>
+      <p>I'm a programmer and founder based in San Francisco.</p>
       <p>Currently, I'm spending my days as CTO of <a href="https://heyoutline.com" target="_blank" rel="noopener noreferrer">Outline</a>, a platform that helps companies understand and engage with their customer communities. <a href="/about">About</a> • <a href="/now">Now</a> • <a href="/contact">Contact</a></p>
     </div>
   </div>
